src/scss/__layout.scss
main {
  width:80%;
  margin: auto;
  @media screen and (max-width: 1020px) {
    & {
      width: 98vw;
      padding-left: 3px;
      padding-right: 3px;
    }
  }
}

@mixin sidebar_common(){
  float:left;
  width: 36%;
  padding: 1px;
  height: 100%;
  display: flex;
  flex-direction: column;

  .banner {
    font-size: 0.6rem;
  }

  aside {
    flex-grow:3;
    height: 100vh;
    overflow-y: scroll;
  }
  
  footer {
    padding: 0;
    padding-top:2px;
    padding-bottom: 2px;
    align-self: flex-end;
  }

  .button-close {
    display: none;
  }

  @media print {
    display: none;
  }
}

@mixin sidebar_offcanvas() {
  display: none;
  position: fixed;
  left: 0;
  z-index: 999999;
  width: 40%;
  background-color: var(--color-bg);
  padding: 1px;
  overflow-y: scroll;

  .button-close {
    display: block;
  }

  .banner {
    font-size: 0.8rem;
  }

}

@mixin sidebar_offcanvas_sm(){
  width: 100%;
  border: none;
  overflow-y: scroll;

  .banner {
    font-size: 1rem;
  }
}

.sidebar-layout {
  margin: auto;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items:stretch;
  margin-top: 3px;
  height: 100vh;
  
  .aside-wrapper-fullheight {
    @include sidebar_common();

    &[data-visible="false"]{
      display: none;
    }

    @media screen and (max-width: 1700px) {
      @include sidebar_offcanvas();
      border-right: 2px dashed var(--color-fe);
      top: 60px !important;

      &[data-visible="false"] {
        display: none !important;
      }

      &[data-visible="true"]{
        display: flex !important;
      }
    }

    @media screen and (max-width: 800px) {
      @include sidebar_offcanvas_sm();
    }
  }

  .aside-wrapper {
    @include sidebar_common();
    

    @media screen and (max-width: 1600px) {
      @include sidebar_offcanvas();
      border: 2px dashed var(--color-fe);
      top:0;

      &[data-visible="false"]{
        display: none;
      }

      &[data-visible="true"]{
        display: flex;
      }
    }
    
    @media screen and (max-width: 800px) {
      @include sidebar_offcanvas_sm();
    }
  }
}

.main-wrapper {
    float: right;
    width: auto !important;
    margin: 1px !important;
    height: 100%;
    overflow-y: scroll;
    flex-grow: 4;
    @media screen and (max-width: 1600px) {
      & {
        width: 100%;
      }
    }
}

.top-left-responsive {
  display: none;
  position: sticky;
  width: 3rem;
  height: 3rem;
  font-size: 2rem !important;
  border: 1px dashed;
  top:0;
  left:0;
  
  @media screen and (max-width:1600px) {
    & {
      display:flex;
      align-items: center;
      justify-content: center;

    
    }
  }
}

@media screen and (max-width: 800px) {
  .sidebar-layout {
    .aside-wrapper {
     width: 100%;
    }

    .main-wrapper {
      width: 100%;
    }
  }
}

@media print {
  .sidebar-layout {
    height: 100%;
    color: #000;

    .main-wrapper {
      width: 100%;
      height: 100%;
    }
  }

  main {
    width: 100%;
  }
}

